univention-ad-connector (8.0.15-1) unstable; urgency=low
  * revised UMC module description (Bug #32022)


univention-management-console-module-udm (4.0.65-1) unstable; urgency=low

  * fixed typo in UMC UDM policy module description (Bug #32022)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45638 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,6 +1,12 @@
+univention-management-console-module-udm (4.0.65-1) unstable; urgency=low
+
+  * fixed typo in UMC UDM policy module description (Bug #32022)
+
+ -- Lukas Walter <walter@univention.de>  Mon, 28 Oct 2013 16:02:27 +0100
+
 univention-management-console-module-udm (4.0.64-1) unstable; urgency=low
 
-  * revised udm module descriptions again (Bug #32022)
+  * revised UMC UDM module descriptions again (Bug #32022)
 
  -- Lukas Walter <walter@univention.de>  Mon, 28 Oct 2013 11:22:49 +0100
 
