--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.15-1) unstable; urgency=low
+
+  * revised UMC module description (Bug #32022)
+
+ -- Lukas Walter <walter@univention.de>  Mon, 28 Oct 2013 16:00:59 +0100
+
 univention-ad-connector (8.0.14-1) unstable; urgency=low
 
   * Bug #32698: serve private keys via UMCP
