* Bug #32978: added caching of static UDM object values for optimization
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45640 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.66-1) unstable; urgency=low
+
+  * Bug #32978: added caching of static UDM object values for optimization
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 28 Oct 2013 16:18:53 +0100
+
 univention-management-console-module-udm (4.0.65-1) unstable; urgency=low
 
   * fixed typo in UMC UDM policy module description (Bug #32022)
