--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.134-1) unstable; urgency=low
+
+  * Bug #32978: load combo box data earlier for optimization purposes
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 28 Oct 2013 18:28:59 +0100
+
 univention-management-console-frontend (3.0.133-1) unstable; urgency=low
 
   * correctly remove obsolete conffiles (Bug #32678)
