--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.25-4) unstable; urgency=low
+
+  * Fix restart of slapd in ldapschema listener (Bug #32392)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 28 Oct 2013 18:53:00 +0100
+
 univention-lib (3.0.25-2) unstable; urgency=low
 
   * Commit schema extensions as well on DC backups (Bug #31801)
