* Adjust german translation of "universal group" (Bug #32767)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45647 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.72-3) unstable; urgency=low
+
+  * Adjust german translation of "universal group" (Bug #32767)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 28 Oct 2013 19:33:37 +0100
+
 univention-directory-manager-modules (9.0.72-2) unstable; urgency=low
 
   * Bug #32565: Stop UDM cli in postinst: Syntax or handlers may have changed
