--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.58-2) unstable; urgency=low
+
+  * Fix PXE, DHCP, Samba, DNS rewrite (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 28 Oct 2013 20:12:05 +0100
+
 univention-system-setup (7.0.58-1) unstable; urgency=low
 
   * Enable debugging by default (Bug #28670)
