* Bug #32565: Catch unknown syntax nonetheless, write error message. May happen in postinst (e.g. umc-modules-apps) - not critical there
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45656 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (6.0.20-1) unstable; urgency=low
+
+  * Bug #32565: Catch unknown syntax nonetheless, write error message. May
+    happen in postinst (e.g. umc-modules-apps) - not critical there
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 29 Oct 2013 00:57:23 +0100
+
 univention-management-console (6.0.19-1) unstable; urgency=low
 
   * Bug #32698: fix possibility to response with content types !=
