* Don't hide the dns-* users by default because the DRS replication   took in most cases about five minutes which increases the   installation time too much compared to the benefit. Wait for Bug   #30115 (Bug #32871)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45657 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,12 @@
+univention-samba4 (3.0.33-1) unstable; urgency=low
+
+  * Don't hide the dns-* users by default because the DRS replication
+    took in most cases about five minutes which increases the
+    installation time too much compared to the benefit. Wait for Bug
+    #30115 (Bug #32871)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 29 Oct 2013 06:07:24 +0100
+
 univention-samba4 (3.0.32-1.1) unstable; urgency=low
 
   * Fix python syntax in scripts/purge_s4_computer.py (Bug #30763)
