--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.157-1) unstable; urgency=low
+
+  * Bug #32554: updated ignore filter for file extensions and fixed test
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 29 Oct 2013 07:59:16 +0100
+
 ucs-test (4.0.156-7) unstable; urgency=low
 
   * 53_samba-common/50quota: from time to time one smbcquotas login
