--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.31-1) unstable; urgency=low
+
+  * univention-ad-takeover: update group mapping (Bug #29486)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 29 Oct 2013 08:09:09 +0100
+
 univention-s4-connector (8.0.30-1.1) unstable; urgency=low
 
   * univention-ad-takeover:
