* Bug #32613: adjust links in footer of ucs overview
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45664 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.13-1) unstable; urgency=low
+
+  * Bug #32613: adjust links in footer of ucs overview
+
+ -- Florian Best <best@univention.de>  Tue, 29 Oct 2013 10:00:30 +0100
+
 univention-apache (6.0.12-8) unstable; urgency=low
 
   * adapted univention-apache.postinst to not fail when unsetting legacy UCRVs
