* Re-commit /etc/krb5.keytab after join and before final samba4 restart   (Bug #31698) * Add more debug messages to track this issue.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45666 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,11 @@
+univention-samba4 (3.0.33-1.1) unstable; urgency=low
+
+  * Re-commit /etc/krb5.keytab after join and before final samba4 restart
+    (Bug #31698)
+  * Add more debug messages to track this issue.
+
+ -- Arvid Requate <requate@univention.de>  Tue, 29 Oct 2013 11:12:09 +0100
+
 univention-samba4 (3.0.33-1) unstable; urgency=low
 
   * Don't hide the dns-* users by default because the DRS replication
