* Bug #32949: enhance interface removal
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45667 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.59-1) unstable; urgency=low
+
+  * Bug #32949: enhance interface removal
+
+ -- Florian Best <best@univention.de>  Tue, 29 Oct 2013 11:22:38 +0100
+
 univention-system-setup (7.0.58-2) unstable; urgency=low
 
   * Fix PXE, DHCP, Samba, DNS rewrite (Bug #28670)
