Bug #30945: Updated UCR variable descriptions
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45668 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-antivir-mail/debian/changelog
+++ b/mail/univention-antivir-mail/debian/changelog
@@ -1,3 +1,9 @@
+univention-antivir-mail (5.0.0-4) unstable; urgency=low
+
+  * Update/review UCR variable descriptions (Bug #30945)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 29 Oct 2013 09:19:03 +0100
+
 univention-antivir-mail (5.0.0-3) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30945)
