--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-cyrus (6.0.5-3) unstable; urgency=low
+
+  * Bug #30945: Improved UCR variable description for mail/cyrus/folder/predefined_folders
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 29 Oct 2013 09:22:42 +0100
+
 univention-mail-cyrus (6.0.5-2) unstable; urgency=low
 
   * Improve UCR variable descriptions for mail/cyrus/ssl/capath and mail/cyrus/ssl/cafile
