--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.8-2) unstable; urgency=low
+
+  * Bug #30945: Update UCR variable descriptions
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 29 Oct 2013 09:35:21 +0100
+
 univention-mail-postfix (8.0.8-1) unstable; urgency=low
 
   * remove unjoin script in postinst
