--- a/mail/univention-spamassassin/debian/changelog
+++ b/mail/univention-spamassassin/debian/changelog
@@ -1,3 +1,9 @@
+univention-spamassassin (5.0.0-2) unstable; urgency=low
+
+  * Update/review UCR variable descriptions (Bug #30945)
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 29 Oct 2013 09:30:48 +0100
+
 univention-spamassassin (5.0.0-1) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30945)
