* Bug #32565: Improve fallback logging
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45669 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.21-1) unstable; urgency=low
+
+  * Bug #32565: Improve fallback logging
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 29 Oct 2013 11:53:44 +0100
+
 univention-management-console (6.0.20-1) unstable; urgency=low
 
   * Bug #32565: Catch unknown syntax nonetheless, write error message. May
