* Bug #32978: fix problems with caching, fix direct loading of UDM objects
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45670 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.67-1) unstable; urgency=low
+
+  * Bug #32978: fix problems with caching, fix direct loading of UDM objects
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 29 Oct 2013 11:59:36 +0100
+
 univention-management-console-module-udm (4.0.66-1) unstable; urgency=low
 
   * Bug #32978: added caching of static UDM object values for optimization
