fixed common spelling mistakes (Bug #32662)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45674 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-join/debian/changelog
+++ b/management/univention-join/debian/changelog
@@ -1,3 +1,9 @@
+univention-join (6.0.15-1) unstable; urgency=low
+
+  * fixed common spelling mistakes (Bug #32662)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 29 Oct 2013 13:04:43 +0100
+
 univention-join (6.0.14-1) unstable; urgency=low
 
   * Bug #30004: adjustements for new notifications
