--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.72-4) unstable; urgency=low
+
+  * fixed common spelling mistakes (Bug #32662)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 29 Oct 2013 13:07:05 +0100
+
 univention-directory-manager-modules (9.0.72-3) unstable; urgency=low
 
   * Adjust german translation of "universal group" (Bug #32767)
@@ -4979,7 +4985,7 @@ univention-directory-manager-modules (5.0.10-1) unstable; urgency=low
 
 univention-directory-manager-modules (5.0.9-1) unstable; urgency=low
 
-  * remove an user from his group whatever the dn is upper or lower
+  * remove a user from his group whatever the dn is upper or lower
     case. Bug #14062
 
  -- Stefan Gohmann <gohmann@univention.de>  Fri, 10 Jul 2009 11:52:11 +0200
