* Bug #32978: WIP early loading of form values
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45676 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.68-1) unstable; urgency=low
+
+  * Bug #32978: WIP early loading of form values
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 29 Oct 2013 13:35:10 +0100
+
 univention-management-console-module-udm (4.0.67-2) unstable; urgency=low
 
   * fixed common spelling mistakes (Bug #32662)
