* Bug #30004: make sure LoginDialog is loaded earlier
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45678 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.135-1) unstable; urgency=low
+
+  * Bug #30004: make sure LoginDialog is loaded earlier
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 29 Oct 2013 14:03:45 +0100
+
 univention-management-console-frontend (3.0.134-1) unstable; urgency=low
 
   * Bug #32978: load combo box data earlier for optimization purposes
