--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.136-1) unstable; urgency=low
+
+  * Bug #32820: adjust <noscript> message
+
+ -- Florian Best <best@univention.de>  Tue, 29 Oct 2013 14:34:29 +0100
+
 univention-management-console-frontend (3.0.135-1) unstable; urgency=low
 
   * Bug #30004: make sure LoginDialog is loaded earlier
