* Added well known sid for IIS_IUSRS (Bug #29486)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45683 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.32-1) unstable; urgency=low
+
+  * Added well known sid for IIS_IUSRS (Bug #29486)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 29 Oct 2013 14:46:16 +0100
+
 univention-s4-connector (8.0.31-3) unstable; urgency=low
 
   * Add well knwon groups from SBS 2008 (Bug #29486)
