* Bug #32698: fix permissions of /univention-ad-connector/*
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45686 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.16-1) unstable; urgency=low
+
+  * Bug #32698: fix permissions of /univention-ad-connector/*
+
+ -- Florian Best <best@univention.de>  Tue, 29 Oct 2013 15:04:50 +0100
+
 univention-ad-connector (8.0.15-2) unstable; urgency=low
 
   * fixed common spelling mistakes (Bug #32662)
