* Bug #26418: fix typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45687 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.15-1) unstable; urgency=low
+
+  * Bug #26418: fix typo
+
+ -- Florian Best <best@univention.de>  Tue, 29 Oct 2013 15:21:51 +0100
+
 univention-virtual-machine-manager-daemon (3.0.14-1) unstable; urgency=low
 
   * Bug #30004: adjustements for new notifications
