* 10_ldap/83acl_registration_versioncheck: Test case for ucsversionend   (Bug #32676)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45688 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.159-1) unstable; urgency=low
+
+  * 10_ldap/83acl_registration_versioncheck: Test case for ucsversionend
+    (Bug #32676)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 29 Oct 2013 15:55:51 +0100
+
 ucs-test (4.0.158-1) unstable; urgency=low
 
   * fixed common spelling mistakes (Bug #32662)
