univention-apache (6.0.13-3) unstable; urgency=low
  * ignore empty values when migrating umc/server/languages UCRVs, quoting
    improved (Bug #32678)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45689 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,10 @@
+univention-apache (6.0.13-3) unstable; urgency=low
+
+  * ignore empty values when migrating umc/server/languages UCRVs, quoting
+    improved (Bug #32678)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 29 Oct 2013 16:01:30 +0100
+
 univention-apache (6.0.13-2) unstable; urgency=low
 
   * do not call xargs with "-0" in postinst (leads to some UCRVs with invalid
