--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.13-4) unstable; urgency=low
+
+  * fixed typo (Bug #32678)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 29 Oct 2013 17:25:54 +0100
+
 univention-apache (6.0.13-3) unstable; urgency=low
 
   * ignore empty values when migrating umc/server/languages UCRVs, quoting
