* Bug #32978: added asynchronous widget rendering, refactorization of renderDetailPage() into small chunks
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45695 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.69-1) unstable; urgency=low
+
+  * Bug #32978: added asynchronous widget rendering, refactorization of
+    renderDetailPage() into small chunks
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 29 Oct 2013 17:31:53 +0100
+
 univention-management-console-module-udm (4.0.68-1) unstable; urgency=low
 
   * Bug #32978: WIP early loading of form values
