* Bug #32978: clean cache for UDM objects if extended attributes are modified
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45698 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.71-1) unstable; urgency=low
+
+  * Bug #32978: clean cache for UDM objects if extended attributes are modified
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 29 Oct 2013 18:20:55 +0100
+
 univention-management-console-module-udm (4.0.70-1) unstable; urgency=low
 
   * Bug #32978: fixed policy tab, disable submit button until form.ready()
