Bug #28670: USS fixes
Fix dnsedit call.
Also rewrite several UCC UCRVs.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45700 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.60-1) unstable; urgency=low
+
+  * Fix dnsedit call (Bug #28670)
+  * Also rewrite several UCC UCRVs.
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 29 Oct 2013 17:37:39 +0100
+
 univention-system-setup (7.0.59-1) unstable; urgency=low
 
   * Bug #32949: enhance interface removal
