* Bug #32613: localize link to wiki.univention.de
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45705 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (6.0.14-1) unstable; urgency=low
+
+  * Bug #32613: localize link to wiki.univention.de
+
+ -- Florian Best <best@univention.de>  Wed, 30 Oct 2013 12:03:18 +0100
+
 univention-apache (6.0.13-4) unstable; urgency=low
 
   * fixed typo (Bug #32678)
