--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.48-3) unstable; urgency=low
+
+  * removed obsolete code (Bug #30904)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 30 Oct 2013 14:35:58 +0100
+
 univention-management-console-module-appcenter (3.0.48-2) unstable; urgency=low
 
   * also remove fetch mail errata UCRVs (Bug #30904)
