--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.16-2) unstable; urgency=low
+
+  * Bug #32698: remove private keys on update
+
+ -- Florian Best <best@univention.de>  Wed, 30 Oct 2013 15:04:51 +0100
+
 univention-ad-connector (8.0.16-1) unstable; urgency=low
 
   * Bug #32698: fix permissions of /univention-ad-connector/*
