--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.73-1) unstable; urgency=low
+
+  * Bug #32978: fix cache reload with superordinates, reset users/user cache
+    when editing or removing user templates
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 30 Oct 2013 15:32:44 +0100
+
 univention-management-console-module-udm (4.0.72-1) unstable; urgency=low
 
   * Bug #32978: cache more UDM values to speed up opening a UMC module
